--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,29 +1,29 @@
 /* Dark mode colors. */
 :root {
-  --sl-color-accent-low: #3c1712;
-  --sl-color-accent: #bb2e22;
-  --sl-color-accent-high: #edbbb2;
+  --sl-color-accent-low: #192726;
+  --sl-color-accent: #407471;
+  --sl-color-accent-high: #bbcdcb;
   --sl-color-white: #ffffff;
-  --sl-color-gray-1: #efedec;
-  --sl-color-gray-2: #c4c1c1;
-  --sl-color-gray-3: #908a89;
-  --sl-color-gray-4: #5c5756;
-  --sl-color-gray-5: #3c3736;
-  --sl-color-gray-6: #2a2625;
-  --sl-color-black: #1a1817;
+  --sl-color-gray-1: #eceef2;
+  --sl-color-gray-2: #c0c2c7;
+  --sl-color-gray-3: #888b96;
+  --sl-color-gray-4: #545861;
+  --sl-color-gray-5: #353841;
+  --sl-color-gray-6: #24272f;
+  --sl-color-black: #17181c;
 }
 /* Light mode colors. */
 :root[data-theme="light"] {
-  --sl-color-accent-low: #f3ccc6;
-  --sl-color-accent: #bd3025;
-  --sl-color-accent-high: #571b15;
-  --sl-color-white: #1a1817;
-  --sl-color-gray-1: #2a2625;
-  --sl-color-gray-2: #3c3736;
-  --sl-color-gray-3: #5c5756;
-  --sl-color-gray-4: #908a89;
-  --sl-color-gray-5: #c4c1c1;
-  --sl-color-gray-6: #efedec;
-  --sl-color-gray-7: #f7f6f6;
+  --sl-color-accent-low: #cddad9;
+  --sl-color-accent: #427673;
+  --sl-color-accent-high: #213736;
+  --sl-color-white: #17181c;
+  --sl-color-gray-1: #24272f;
+  --sl-color-gray-2: #353841;
+  --sl-color-gray-3: #545861;
+  --sl-color-gray-4: #888b96;
+  --sl-color-gray-5: #c0c2c7;
+  --sl-color-gray-6: #eceef2;
+  --sl-color-gray-7: #f5f6f8;
   --sl-color-black: #ffffff;
 }
